--- a/Mapty/style.css
+++ b/Mapty/style.css
@@ -70,11 +70,16 @@ h2 {
   text-align: center;
 }
 
+.actions--on__workout {
+  display: flex;
+  gap: 5px;
+}
+
 .activity__description--data {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
   min-width: max-content;
 
   font-size: 0.8rem;
@@ -171,6 +176,30 @@ footer {
   min-width: max-content;
 }
 
+.swal-button {
+  background-color: #2d3439;
+  font-size: 18px;
+  border: 1px solid #294d1e;
+  width: 100%;
+}
+
+.swal-footer {
+  background-color: rgb(245, 248, 250);
+  margin-top: 32px;
+  border-top: 1px solid #e9eef1;
+  overflow: hidden;
+}
+
+.on__workout {
+  padding: 6px 12px;
+  background-color: #2d3439;
+  font-size: 12px;
+  color: white;
+  border: 1px solid #294d1e;
+  border-radius: 10px;
+  width: 80px;
+}
+
 @media (max-width: 900px) {
   .leaflet-container {
     position: static;
@@ -187,7 +216,7 @@ footer {
 
   .activity__description--data,
   footer {
-    font-size: 0.4rem;
+    font-size: 0.6rem;
   }
 
   .activity__type,
@@ -202,19 +231,20 @@ footer {
   }
 
   h2 {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
   }
 
   .side--left {
     flex: 0.2;
     width: 100%;
+    max-height: 40%;
     gap: 1%;
   }
 
   .workouts__container {
     min-height: auto;
     max-height: 70%;
-    margin: 5% 0%;
+    margin: 1% 0%;
   }
 
   .workout__form {
@@ -222,6 +252,10 @@ footer {
     height: fit-content;
     padding: 10px;
     gap: 5px;
+  }
+
+  .swal-button {
+    font-size: 10px;
   }
 
   .side--right {
