--- a/Mapty/style.css
+++ b/Mapty/style.css
@@ -8,6 +8,7 @@ html {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 main {
@@ -33,6 +34,14 @@ main {
   align-items: center;
 
   padding: 3%;
+}
+
+.total__actions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  width: 90%;
 }
 
 .workouts__container {
@@ -67,6 +76,7 @@ main {
 
 h2 {
   font-size: 0.9rem;
+  font-weight: 400;
   text-align: center;
 }
 
@@ -83,6 +93,7 @@ h2 {
   min-width: max-content;
 
   font-size: 0.8rem;
+  font-weight: 300;
 }
 
 .workout__form {
@@ -164,6 +175,7 @@ select {
 footer {
   text-align: center;
   font-size: 0.8rem;
+  font-weight: 400;
   color: rgb(154, 154, 154);
 }
 
@@ -174,6 +186,7 @@ footer {
 
 .leaflet-popup-content {
   min-width: max-content;
+  font-family: "Montserrat", sans-serif;
 }
 
 .swal-button {
@@ -193,11 +206,18 @@ footer {
 .on__workout {
   padding: 6px 12px;
   background-color: #2d3439;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 100;
   color: white;
-  border: 1px solid #294d1e;
+  border: 1px solid #445058;
   border-radius: 10px;
   width: 80px;
+  min-width: max-content;
+}
+
+.removed--from__flow {
+  display: none;
 }
 
 @media (max-width: 900px) {
