implement weather display on click

--- a/Mapty/style.css
+++ b/Mapty/style.css
@@ -172,6 +172,12 @@ select {
   opacity: 0;
 }
 
+.weather__field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 footer {
   text-align: center;
   font-size: 0.8rem;
