--- a/Mapty/style.css
+++ b/Mapty/style.css
@@ -30,7 +30,7 @@ main {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 
   padding: 3%;
