--- a/To-Do App/public/css/general.css
+++ b/To-Do App/public/css/general.css
@@ -82,12 +82,37 @@ html {
   position: relative;
 }
 
-.close, .closeList {
+.closeList {
   position: absolute;
   top: 0;
   right: 0;
-  padding: 5px 15px;
+  padding: 5px 5px;
   font-size: large;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 7.5px 7.5px;
+}
+
+.update {
+  position: absolute;
+  top: 0;
+  right: 35px;
+  padding: 7.5px 7.5px;
+}
+
+.done_circle {
+  width: 15px;
+  height: 15px;
+  border: 1px white solid;
+  border-radius: 50%;
+  position: absolute;
+  top: 30%;
+  left: 0;
+  margin-right: 10px;
 }
 
 .weather {
@@ -137,13 +162,27 @@ html {
     width: 5px;
     border-width: 0 0.5px 0.5px 0;
   }
-
-  .close, .closeList {
+  
+  .closeList {
     position: absolute;
     top: 0;
     right: 0;
     padding: 5px 5px;
     font-size: xx-small;
+  }
+  
+  .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    /* padding: 5px 5px; */
+  }
+  
+  .update {
+    position: absolute;
+    top: 0;
+    right: 30px;
+    /* padding: 5px 5px; */
   }
 
 }
