--- a/Collect Coins/views/partials/header.ejs
+++ b/Collect Coins/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -18,32 +18,72 @@
     ></script>
 
     <style>
-        span {
-            font-size: 1.1rem;
-        }
+      span {
+        font-size: 1.1rem;
+      }
 
-        input::placeholder, .create-activity {
-            font-size: 12px; /* Adjust the font size as needed */
-        }
+      input::placeholder,
+      .create-activity {
+        font-size: 12px; /* Adjust the font size as needed */
+      }
 
+      .tooltip-wrapper {
+        position: relative;
+        display: inline-block;
+      }
+      .tooltip {
+        visibility: hidden;
+        width: 120px;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+
+        /* Position the tooltip */
+        position: absolute;
+        z-index: 2;
+        bottom: 100%;
+        left: 50%;
+        margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+      }
+
+      .tooltip-wrapper:hover .tooltip {
+        visibility: visible;
+      }
     </style>
 
     <title>Collect Coins</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="container my-1">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb breadcrumb-chevron p-3 bg-body-tertiary rounded-3">
-            <li class="breadcrumb-item">
-                <a class="link-body-emphasis fw-semibold text-decoration-none" href="../">Sections</a>
-              </li>
-            <li class="breadcrumb-item">
-              <a class="link-body-emphasis fw-semibold text-decoration-none" href="../wishes">Wishes</a>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">
-                <a class="link-body-emphasis fw-semibold text-decoration-none" href="../score">Total Score (<%= locals.totalScore %>)</a>
-            </li>
-          </ol>
-        </nav>
-      </div>
+      <nav aria-label="breadcrumb">
+        <ol
+          class="breadcrumb breadcrumb-chevron p-3 bg-body-tertiary rounded-3"
+        >
+          <li class="breadcrumb-item">
+            <a
+              class="link-body-emphasis fw-semibold text-decoration-none"
+              href="../"
+              >Sections</a
+            >
+          </li>
+          <li class="breadcrumb-item">
+            <a
+              class="link-body-emphasis fw-semibold text-decoration-none"
+              href="../wishes"
+              >Wishes</a
+            >
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            <a
+              class="link-body-emphasis fw-semibold text-decoration-none"
+              href="../score"
+              >Total Score (<%= locals.totalScore %>)</a
+            >
+          </li>
+        </ol>
+      </nav>
+    </div>
+  </body>
+</html>
