navbar links fading when not active

--- a/Personal-Website/styles/index.css
+++ b/Personal-Website/styles/index.css
@@ -22,7 +22,9 @@ body {
   top: 0;
   opacity: 0.5;
 }
-
+.navbar-home {
+  transition: all 0.2s ease-in-out;
+}
 .reference {
   padding: 10px 20px;
   margin: 10px;
