--- a/Personal-Website/styles/index.css
+++ b/Personal-Website/styles/index.css
@@ -40,6 +40,7 @@ a:visited,
 a:active {
   text-decoration: none;
   color: #fff;
+  cursor: pointer;
 }
 a:hover {
   transform: scale(1.2);
@@ -259,6 +260,7 @@ section a:hover {
   background-image: url("../assets/images/ales-nesetril-unsplash-background.jpg");
   background-size: cover;
   color: #fff;
+  margin-bottom: 10px;
 }
 .contact-header {
   text-align: center;
@@ -271,6 +273,17 @@ section a:hover {
   justify-content: space-around;
 }
 
+.copyright {
+  text-align: center;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.copyright-text {
+  font-size: 0.75rem;
+  color: #555;
+  margin-bottom: 10px;
+}
 /* S K I L L S */
 @media (max-width: 600px) {
   #skills {
